--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.5",
     "next": "16.1.6",
